# git-alias-prettifier

./: Cargo.toml  LICENSE  README.md  git_alias_prettifier.py
src/: main.rs
