[package]
name = "git-alias-prettifier"
version = "0.2.0"
authors = ["Casper Verhaar <casper.verhaar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
git2 = "0.13.17"

[profile.release]
lto = true
